<resources>
    <string name="app_name">XCritical</string>
    <string name="text_forgot"><u>Забыли пароль?</u></string>
    <string name="text_enter_password">Введите пароль</string>
    <string name="text_password">Пароль</string>
    <string name="text_input_email">Введите e-mail</string>
    <string name="text_email">E-mail</string>
    <string name="text_login">Войти</string>
    <string name="text_signup">Зарегистрироваться</string>
    <string name="text_error_password">Неверный пароль</string>
    <string name="text_error_email">Неверный e-mail</string>
    <string name="text_next">Далее</string>
    <string name="text_name">Имя</string>
    <string name="text_input_name">Ваше имя</string>
    <string name="text_error_name">Обязательное поле</string>
    <string name="text_lastname">Фамилия</string>
    <string name="text_input_lastname">Ваша фамилия</string>
    <string name="myDeal">МОИ СДЕЛКИ</string>
    <string name="account">АККАУНТ</string>
    <string name="instruments">ИНСТРУМЕНТЫ</string>
    <string name="signals">СИГНАЛЫ</string>
    <string name="more">ЕЩЕ</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="p_l_266_01"><![CDATA[P&L: 266,01]]></string>
    <string name="required_field">Обязательное поле</string>
    <string name="your_lastname">Ваша фамилия</string>
    <string name="name">Имя</string>
    <string name="your_name">Ваше имя</string>
    <string name="lastname">Фамилия</string>
    <string name="number">Телефон</string>
    <string name="error_number">Некорректный номер телефона</string>
    <string name="incorrect_e_mail">Некорректный e-mail</string>
    <string name="terms_use">Я принимаю пользовательское соглашение</string>
    <string name="change_broker">Сменить брокера</string>

</resources>