<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.xcritical.viewmodel.ViewModelLog" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.30" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.312"
            app:srcCompat="@drawable/ic_frame" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="#00FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linearLayoutEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginLeft="4dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto"
                        android:text="@string/text_email"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:fontFamily="@font/roboto"
                        android:hint="@string/text_input_email"
                        android:inputType="textEmailAddress"
                        android:text="@={viewModel.email}"
                        android:textColor="@color/hintText"
                        android:textColorHint="@color/hintText"
                        android:textSize="14sp"
                        app:backgroundTint="@color/hintText" />

                    <TextView
                        android:id="@+id/textErrorEmail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/roboto"
                        android:text="@string/text_error_email"
                        android:textColor="@color/redError"
                        android:visibility="@{viewModel.validEmail ? View.INVISIBLE : View.VISIBLE}" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginLeft="4dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto"
                        android:text="@string/text_password"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/editTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:focusable="true"
                        android:fontFamily="@font/roboto"
                        android:hint="@string/text_enter_password"
                        android:inputType="textPassword"
                        android:text="@={viewModel.password}"
                        android:textColor="@color/hintText"
                        android:textColorHint="@color/hintText"
                        android:textSize="14sp"
                        app:backgroundTint="@color/hintText" />

                    <TextView
                        android:id="@+id/textErrorPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/roboto"
                        android:text="@string/text_error_password"
                        android:textColor="@color/redError"
                        android:visibility="@{viewModel.validPassword ? View.INVISIBLE : View.VISIBLE}" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textForgotPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:clickable="true"
                        android:focusable="true"
                        android:fontFamily="@font/roboto_medium"
                        android:onClick="forgotPassword"
                        android:paddingLeft="20dp"
                        android:paddingTop="10dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="10dp"
                        android:text="@string/text_forgot"
                        android:textColor="@color/lightPurpleText"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/buttonLogin"
                        android:layout_width="match_parent"
                        android:layout_height="46dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="0dp"
                        android:layout_marginRight="0dp"
                        android:layout_marginBottom="15dp"
                        android:background="@drawable/button_light_style"
                        android:fontFamily="@font/roboto_medium"
                        android:onClick="@{() -> viewModel.onLogin()}"
                        android:text="@string/text_login"
                        android:textAllCaps="false"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/buttonSignup"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="0dp"
                        android:layout_marginRight="0dp"
                        android:background="@drawable/button_dark_style"
                        android:onClick="onRegistration"
                        android:text="@string/text_signup"
                        android:textAllCaps="false" />
                </LinearLayout>

            </LinearLayout>

        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>